<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNote">

    <EditText
        android:id="@+id/EditTextEnterNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/Edit_text_enter_note"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="Enter Note"
        android:inputType="text" />

    <RadioGroup
        android:id="@+id/RadioGroupPriority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/EditTextEnterNote">


        <RadioButton
            android:id="@+id/RadioButton_low"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_margin="8dp"
            android:padding="8dp"
            android:text="@string/RadioButton_low"
            android:background="@android:color/holo_green_light"
            android:textColor="@color/white"

            />
        <RadioButton
            android:id="@+id/RadioButtomMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:background="@android:color/holo_orange_light"
            android:text="@string/RadioButtommedium"
            android:textColor="@color/white"

            />
        <RadioButton
            android:id="@+id/RadioButtonHigh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:text="@string/RadioButtonHigh"
            android:background="@android:color/holo_red_light"
            android:textColor="@color/white"

            />

    </RadioGroup>
    <Button
        android:id="@+id/CreateNoteBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Buttoncreatenote"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/RadioGroupPriority"/>



</androidx.constraintlayout.widget.ConstraintLayout>